[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/piece/piece.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Game.gd" type="Script" id=2]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="piece2" parent="." instance=ExtResource( 1 )]
position = Vector2( 64, 16 )
expectedPos = Vector2( 64, 16 )

[node name="piece3" parent="." instance=ExtResource( 1 )]
position = Vector2( 80, 16 )
expectedPos = Vector2( 80, 16 )

[node name="piece4" parent="." instance=ExtResource( 1 )]
position = Vector2( 96, 16 )
expectedPos = Vector2( 96, 16 )

[node name="piece5" parent="." instance=ExtResource( 1 )]
position = Vector2( 48, 32 )
expectedPos = Vector2( 48, 32 )

[node name="piece6" parent="." instance=ExtResource( 1 )]
position = Vector2( 64, 32 )
expectedPos = Vector2( 64, 32 )

[node name="piece7" parent="." instance=ExtResource( 1 )]
position = Vector2( 80, 32 )
expectedPos = Vector2( 80, 32 )

[node name="piece8" parent="." instance=ExtResource( 1 )]
position = Vector2( 96, 32 )
expectedPos = Vector2( 96, 32 )

[node name="piece9" parent="." instance=ExtResource( 1 )]
position = Vector2( 48, 48 )
expectedPos = Vector2( 48, 48 )

[node name="piece10" parent="." instance=ExtResource( 1 )]
position = Vector2( 64, 48 )
expectedPos = Vector2( 64, 48 )

[node name="piece11" parent="." instance=ExtResource( 1 )]
position = Vector2( 80, 48 )
expectedPos = Vector2( 80, 48 )

[node name="piece12" parent="." instance=ExtResource( 1 )]
position = Vector2( 96, 48 )
expectedPos = Vector2( 96, 48 )

[node name="piece13" parent="." instance=ExtResource( 1 )]
position = Vector2( 48, 64 )
expectedPos = Vector2( 48, 64 )

[node name="piece14" parent="." instance=ExtResource( 1 )]
position = Vector2( 64, 64 )
expectedPos = Vector2( 64, 64 )

[node name="piece15" parent="." instance=ExtResource( 1 )]
position = Vector2( 80, 64 )
expectedPos = Vector2( 80, 64 )

[node name="piece16" parent="." instance=ExtResource( 1 )]
position = Vector2( 96, 64 )
expectedPos = Vector2( 96, 64 )
